--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Wachukwu Emmanuel",
   "license": "MIT",
   "dependencies": {
+    "connect-flash": "^0.1.1",
     "ejs": "^3.1.5",
     "ejs-mate": "^3.0.0",
     "express": "^4.17.1",
