--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "express-session": "^1.17.1",
     "joi": "^17.3.0",
     "method-override": "^3.0.0",
-    "mongoose": "^5.11.4",
+    "mongoose": "^5.12.3",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^6.1.0",
     "path": "^0.12.7"
   }
 }
