--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "author": "Wachukwu Emmanuel",
   "license": "MIT",
   "dependencies": {
+    "cloudinary": "^1.25.1",
     "connect-flash": "^0.1.1",
+    "dotenv": "^8.3.0",
     "ejs": "^3.1.5",
     "ejs-mate": "^3.0.0",
     "express": "^4.17.1",
@@ -18,6 +20,8 @@
     "joi": "^17.3.0",
     "method-override": "^3.0.0",
     "mongoose": "^5.12.3",
+    "multer": "^1.4.2",
+    "multer-storage-cloudinary": "^4.0.0",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.1.0",
