--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Wachukwu Emmanuel",
   "license": "MIT",
   "dependencies": {
+    "@mapbox/mapbox-sdk": "^0.12.1",
     "cloudinary": "^1.25.1",
     "connect-flash": "^0.1.1",
     "dotenv": "^8.3.0",
