--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "ejs": "^3.1.5",
     "ejs-mate": "^3.0.0",
     "express": "^4.17.1",
+    "express-mongo-sanitize": "^2.1.0",
     "express-session": "^1.17.1",
+    "helmet": "^4.6.0",
     "joi": "^17.3.0",
     "method-override": "^3.0.0",
     "mongoose": "^5.12.3",
@@ -26,6 +28,7 @@
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.1.0",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "sanitize-html": "^2.3.3"
   }
 }
